--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service Studio - Demo</title>
+    <!-- Updated: 2025-01-16 to force GitHub Pages rebuild -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
