Add service-studio-latest.html as alternative deployment

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                 <p class="text-blue-100">Modern Tailwind-based interface for booth demonstrations</p>
             </a>
 
+            <a href="./service-studio-latest.html"
+               class="block p-6 bg-gradient-to-r from-purple-500 to-pink-600 text-white rounded-lg hover:from-purple-600 hover:to-pink-700 transition-all duration-300 transform hover:scale-105 shadow-lg">
+                <h2 class="text-xl font-semibold mb-2">✨ Service Studio - Latest Version</h2>
+                <p class="text-purple-100">Updated version with dark gradient sidebar and custom icons</p>
+            </a>
+
             <a href="./service-suite-day-1-keynote-prep.html"
                class="block p-6 bg-gradient-to-r from-green-500 to-teal-600 text-white rounded-lg hover:from-green-600 hover:to-teal-700 transition-all duration-300 transform hover:scale-105 shadow-lg">
                 <h2 class="text-xl font-semibold mb-2">🎤 Day 1 Keynote Prep</h2>
