--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="text-center mb-8">
             <h1 class="text-4xl font-bold text-gray-800 mb-4">Service Studio Demos</h1>
             <p class="text-gray-600 text-lg">AI-powered customer service management platform</p>
+            <!-- GitHub Pages rebuild trigger: 2025-01-16 -->
         </div>
 
         <div class="space-y-4">
