Add index.html for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Service Studio Demos</title>
+    <title>Service Studio - Booth Demo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -13,45 +13,17 @@
     </style>
 </head>
 <body class="flex items-center justify-center min-h-screen p-4">
-    <div class="bg-white rounded-lg shadow-2xl p-8 max-w-2xl w-full">
-        <div class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-gray-800 mb-4">Service Studio Demos</h1>
-            <p class="text-gray-600 text-lg">AI-powered customer service management platform</p>
-            <!-- GitHub Pages rebuild trigger: 2025-01-16 -->
-        </div>
+    <div class="bg-white rounded-lg shadow-2xl p-8 max-w-lg w-full text-center">
+        <h1 class="text-3xl font-bold text-gray-800 mb-6">Service Studio</h1>
+        <p class="text-gray-600 mb-8">AI-powered customer service management platform</p>
 
-        <div class="space-y-4">
-            <a href="./service-suite-booth-demo.html"
-               class="block p-6 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-lg hover:from-blue-600 hover:to-purple-700 transition-all duration-300 transform hover:scale-105 shadow-lg">
-                <h2 class="text-xl font-semibold mb-2">🎯 Service Suite Booth Demo</h2>
-                <p class="text-blue-100">Modern Tailwind-based interface for booth demonstrations</p>
-            </a>
+        <a href="./service-suite-booth-demo.html"
+           class="inline-block px-8 py-4 bg-gradient-to-r from-purple-500 to-blue-600 text-white rounded-lg hover:from-purple-600 hover:to-blue-700 transition-all duration-300 transform hover:scale-105 shadow-lg font-semibold">
+            🎯 Launch Demo
+        </a>
 
-            <a href="./service-studio-latest.html"
-               class="block p-6 bg-gradient-to-r from-purple-500 to-pink-600 text-white rounded-lg hover:from-purple-600 hover:to-pink-700 transition-all duration-300 transform hover:scale-105 shadow-lg">
-                <h2 class="text-xl font-semibold mb-2">✨ Service Studio - Latest Version</h2>
-                <p class="text-purple-100">Updated version with dark gradient sidebar and custom icons</p>
-            </a>
-
-            <a href="./service-suite-day-1-keynote-prep.html"
-               class="block p-6 bg-gradient-to-r from-green-500 to-teal-600 text-white rounded-lg hover:from-green-600 hover:to-teal-700 transition-all duration-300 transform hover:scale-105 shadow-lg">
-                <h2 class="text-xl font-semibold mb-2">🎤 Day 1 Keynote Prep</h2>
-                <p class="text-green-100">Interactive AI Suite demo with 6-scene conversation flow</p>
-            </a>
-
-            <a href="./service-suite-day-1-keynote.html"
-               class="block p-6 bg-gradient-to-r from-orange-500 to-red-600 text-white rounded-lg hover:from-orange-600 hover:to-red-700 transition-all duration-300 transform hover:scale-105 shadow-lg">
-                <h2 class="text-xl font-semibold mb-2">🚀 Day 1 Keynote</h2>
-                <p class="text-orange-100">Complete keynote presentation demo</p>
-            </a>
-
-        </div>
-
-        <div class="mt-8 text-center">
-            <p class="text-gray-500 text-sm">
-                Built with AI assistance •
-                <a href="https://github.com/alicegutd/Service-Studio-Booth-Demo" class="text-blue-600 hover:underline">View on GitHub</a>
-            </p>
+        <div class="mt-8 text-sm text-gray-500">
+            <p>Built with Claude Code • GitHub Pages Deployment</p>
         </div>
     </div>
 </body>
