--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -111,10 +111,6 @@
 
         <!-- Level 2: Expanded Navigation Panel -->
         <div id="expanded-nav" class="w-64 bg-white h-screen fixed left-14 top-0 flex flex-col z-10 transition-all duration-300 border-r border-gray-200">
-            <!-- Header -->
-            <div class="p-6 border-b border-gray-100">
-                <h1 class="text-lg font-medium text-gray-900">Service Studio</h1>
-            </div>
 
             <!-- Navigation Content -->
             <div class="flex-1 overflow-y-auto p-4">
@@ -164,14 +160,16 @@
 
         <!-- Main Content Area -->
         <main id="main-content" class="ml-80 flex-1 overflow-auto bg-gray-50 transition-all duration-300">
+            <!-- Top Masthead -->
+            <div class="bg-white border-b border-gray-200 px-6 py-4 sticky top-0 z-5">
+                <h1 class="text-2xl font-bold text-gray-900">Service Studio</h1>
+                <p class="text-gray-600 text-sm">AI-powered customer service management platform</p>
+            </div>
+
             <div class="p-6">
                 <!-- Home Page -->
                 <div id="home-page" class="page-content">
                     <div class="space-y-8">
-                        <div>
-                            <h1 class="text-3xl font-bold text-gray-900">Service Studio</h1>
-                            <p class="text-gray-600 mt-2">AI-powered customer service management platform</p>
-                        </div>
 
                         <!-- AI Command Chatbox -->
                         <div class="bg-white border border-gray-200 rounded-lg p-6 shadow-sm">
