--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -110,7 +110,7 @@
         </div>
 
         <!-- Level 2: Expanded Navigation Panel -->
-        <div id="expanded-nav" class="w-64 bg-white h-screen fixed left-14 top-0 flex flex-col z-10 transition-all duration-300 border-r border-gray-200">
+        <div id="expanded-nav" class="w-64 bg-white h-screen fixed left-14 top-16 flex flex-col z-10 transition-all duration-300 border-r border-gray-200">
 
             <!-- Navigation Content -->
             <div class="flex-1 overflow-y-auto p-4">
@@ -158,13 +158,14 @@
             </div>
         </div>
 
+        <!-- Top Masthead - Spans across entire top -->
+        <div class="bg-white border-b border-gray-200 px-6 py-4 fixed top-0 left-14 right-0 z-15">
+            <h1 class="text-2xl font-bold text-gray-900">Service Studio</h1>
+            <p class="text-gray-600 text-sm">AI-powered customer service management platform</p>
+        </div>
+
         <!-- Main Content Area -->
-        <main id="main-content" class="ml-80 flex-1 overflow-auto bg-gray-50 transition-all duration-300">
-            <!-- Top Masthead -->
-            <div class="bg-white border-b border-gray-200 px-6 py-4 sticky top-0 z-5">
-                <h1 class="text-2xl font-bold text-gray-900">Service Studio</h1>
-                <p class="text-gray-600 text-sm">AI-powered customer service management platform</p>
-            </div>
+        <main id="main-content" class="ml-80 flex-1 overflow-auto bg-gray-50 transition-all duration-300 mt-16">
 
             <div class="p-6">
                 <!-- Home Page -->
