Adjust spacing between top bar and navigation panel/content areas

--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -110,10 +110,10 @@
         </div>
 
         <!-- Level 2: Expanded Navigation Panel -->
-        <div id="expanded-nav" class="w-64 bg-white h-screen fixed left-14 top-16 flex flex-col z-10 transition-all duration-300 border-r border-gray-200">
+        <div id="expanded-nav" class="w-64 bg-white h-screen fixed left-14 top-20 flex flex-col z-10 transition-all duration-300 border-r border-gray-200">
 
             <!-- Navigation Content -->
-            <div class="flex-1 overflow-y-auto p-4">
+            <div class="flex-1 overflow-y-auto p-4 pt-6">
                 <div class="space-y-1">
                     <!-- Home - Active/Selected -->
                     <a href="#" onclick="showPage('home')" class="flex items-center space-x-3 px-3 py-2 rounded-lg transition-colors" style="background-color: #F3F1FF; color: #824BFB;">
@@ -165,9 +165,9 @@
         </div>
 
         <!-- Main Content Area -->
-        <main id="main-content" class="ml-80 flex-1 overflow-auto bg-gray-50 transition-all duration-300 mt-16">
+        <main id="main-content" class="ml-80 flex-1 overflow-auto bg-gray-50 transition-all duration-300 mt-20">
 
-            <div class="p-6">
+            <div class="p-6 pt-8">
                 <!-- Home Page -->
                 <div id="home-page" class="page-content">
                     <div class="space-y-8">
