--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -159,9 +159,12 @@
         </div>
 
         <!-- Top Masthead - Spans across entire top -->
-        <div class="bg-white border-b border-gray-200 px-6 py-4 fixed top-0 left-14 right-0 z-15">
-            <h1 class="text-2xl font-bold text-gray-900">Service Studio</h1>
-            <p class="text-gray-600 text-sm">AI-powered customer service management platform</p>
+        <div class="bg-white fixed top-0 left-14 right-0 z-15">
+            <div class="px-6 py-4">
+                <h1 class="text-2xl font-bold text-gray-900">Service Studio</h1>
+                <p class="text-gray-600 text-sm">AI-powered customer service management platform</p>
+            </div>
+            <div class="border-b border-gray-200 w-full"></div>
         </div>
 
         <!-- Main Content Area -->
