--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -158,14 +158,15 @@
             </div>
         </div>
 
-        <!-- Top Masthead - Spans across entire top -->
+        <!-- Top Masthead - Spans across entire top including over navigation panel -->
         <div class="bg-white fixed top-0 left-14 right-0 z-15">
             <div class="px-6 py-4">
                 <h1 class="text-2xl font-bold text-gray-900">Service Studio</h1>
                 <p class="text-gray-600 text-sm">AI-powered customer service management platform</p>
             </div>
-            <div class="border-b border-gray-200 w-full"></div>
         </div>
+        <!-- Border line that extends over navigation panel -->
+        <div class="fixed top-16 left-14 right-0 border-b border-gray-200 z-15"></div>
 
         <!-- Main Content Area -->
         <main id="main-content" class="ml-80 flex-1 overflow-auto bg-gray-50 transition-all duration-300 mt-20">
