--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -110,7 +110,7 @@
         </div>
 
         <!-- Level 2: Expanded Navigation Panel -->
-        <div id="expanded-nav" class="w-64 bg-white h-screen fixed left-14 top-24 flex flex-col z-10 transition-all duration-300 border-r border-gray-200">
+        <div id="expanded-nav" class="w-64 bg-white h-screen fixed left-14 flex flex-col z-10 transition-all duration-300 border-r border-gray-200" style="top: 70px;">
 
             <!-- Navigation Content -->
             <div class="flex-1 overflow-y-auto p-4 pt-6">
@@ -158,16 +158,16 @@
             </div>
         </div>
 
-        <!-- Top Masthead - Spans across entire top including over navigation panel -->
-        <div class="bg-white fixed top-0 left-14 right-0 z-15 border-b border-gray-200">
-            <div class="px-6 py-6">
+        <!-- Top Masthead - 70px height, spans across entire top -->
+        <div class="bg-white fixed top-0 left-14 right-0 z-15 border-b border-gray-200" style="height: 70px;">
+            <div class="px-6 flex flex-col justify-center h-full">
                 <h1 class="text-2xl font-bold text-gray-900">Service Studio</h1>
-                <p class="text-gray-600 text-sm mt-1">AI-powered customer service management platform</p>
+                <p class="text-gray-600 text-sm">AI-powered customer service management platform</p>
             </div>
         </div>
 
         <!-- Main Content Area -->
-        <main id="main-content" class="ml-80 flex-1 overflow-auto bg-gray-50 transition-all duration-300 mt-24">
+        <main id="main-content" class="ml-80 flex-1 overflow-auto bg-gray-50 transition-all duration-300" style="margin-top: 70px;">
 
             <div class="p-6 pt-8">
                 <!-- Home Page -->
