Remove subtitle from masthead, keep only Service Studio title

--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -160,9 +160,8 @@
 
         <!-- Top Masthead - 70px height, spans across entire top -->
         <div class="bg-white fixed top-0 left-14 right-0 z-15 border-b border-gray-200" style="height: 70px;">
-            <div class="px-6 flex flex-col justify-center h-full">
+            <div class="px-6 flex items-center h-full">
                 <h1 class="text-2xl font-bold text-gray-900">Service Studio</h1>
-                <p class="text-gray-600 text-sm">AI-powered customer service management platform</p>
             </div>
         </div>
 
