Create proper selected state component: 48px height, 4px border radius, integrated left strip

--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -116,9 +116,9 @@
             <div class="flex-1 overflow-y-auto p-4 pt-6">
                 <div class="space-y-1">
                     <!-- Home - Active/Selected -->
-                    <a href="#" onclick="showPage('home')" class="flex items-center space-x-3 py-3 pl-3 pr-3 transition-colors relative" style="background-color: #F3F1FF; color: #824BFB;">
-                        <!-- Left purple strip -->
-                        <div class="absolute left-0 top-0 bottom-0 w-1 bg-purple-600" style="background-color: #824BFB;"></div>
+                    <a href="#" onclick="showPage('home')" class="flex items-center space-x-3 px-3 transition-colors relative overflow-hidden" style="height: 48px; background-color: #F3F1FF; color: #824BFB; border-radius: 4px;">
+                        <!-- Left purple strip as part of selected state component -->
+                        <div class="absolute left-0 top-0 bottom-0 w-1" style="background-color: #824BFB;"></div>
                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
                         </svg>
