Fix icon alignment: append strip instead of prepending to avoid layout shift

--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -372,9 +372,11 @@
 
                             // Add left purple strip (positioned absolutely so it doesn't affect layout)
                             const strip = document.createElement('div');
-                            strip.className = 'absolute left-0 top-0 bottom-0 w-1';
+                            strip.className = 'absolute left-0 top-0 bottom-0';
+                            strip.style.width = '4px';
                             strip.style.backgroundColor = '#6F2EFF';
-                            navItem.insertBefore(strip, navItem.firstChild);
+                            strip.style.zIndex = '1';
+                            navItem.appendChild(strip);
 
                             // Make text bold
                             const textSpan = navItem.querySelector('span');
