--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -370,15 +370,7 @@
                             navItem.style.color = '#6F2EFF';
                             navItem.style.borderRadius = '4px';
 
-                            // Add left purple strip at the very left edge
-                            const strip = document.createElement('div');
-                            strip.className = 'absolute top-0 bottom-0';
-                            strip.style.left = '0px';
-                            strip.style.width = '3px';
-                            strip.style.backgroundColor = '#6F2EFF';
-                            strip.style.borderTopLeftRadius = '4px';
-                            strip.style.borderBottomLeftRadius = '4px';
-                            navItem.appendChild(strip);
+                            // Selected state styling without purple strip
 
                             // Make text bold
                             const textSpan = navItem.querySelector('span');
