--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -173,14 +173,26 @@
                 <div id="home-page" class="page-content">
                     <div class="space-y-8">
 
-                        <!-- AI Command Chatbox -->
-                        <div class="bg-white border border-gray-200 rounded-lg p-6 shadow-sm">
-                            <div class="relative">
-                                <svg class="absolute left-4 top-1/2 transform -translate-y-1/2 text-gray-400 h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                                </svg>
-                                <input type="text" placeholder="Ask about customers, issues, conversations..."
-                                       class="w-full pl-12 pr-4 py-4 text-lg border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent">
+                        <!-- Hero Section -->
+                        <div class="text-center mb-12">
+                            <h1 class="text-4xl font-bold text-gray-900 mb-4">What are we solving today?</h1>
+                            <p class="text-lg text-gray-600 mb-8">Helping and empowering customers with Treasure Data Service AI</p>
+
+                            <!-- AI Chat Interface -->
+                            <div class="bg-white border border-gray-200 rounded-2xl p-8 shadow-sm max-w-4xl mx-auto">
+                                <div class="relative">
+                                    <textarea
+                                        placeholder="Ask Service AI about customers, issues, conversations, knowledge bases..."
+                                        class="w-full p-6 text-lg border border-gray-200 rounded-xl resize-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+                                        rows="4"
+                                    ></textarea>
+                                    <button class="absolute bottom-4 right-4 bg-blue-400 hover:bg-blue-500 text-white px-6 py-2 rounded-lg flex items-center space-x-2 transition-colors">
+                                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
+                                        </svg>
+                                        <span>Start</span>
+                                    </button>
+                                </div>
                             </div>
                         </div>
 
