--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -196,7 +196,7 @@
                                     ></textarea>
                                     <!-- Animated placeholder overlay -->
                                     <div id="animated-placeholder" class="absolute top-6 left-6 text-lg text-gray-400 pointer-events-none">
-                                        Ask Service AI about <span id="rotating-text" class="inline-block">customers</span>...
+                                        Ask Service AI about <span id="rotating-text" class="inline-block">customers</span>
                                     </div>
                                     <button class="absolute bottom-4 right-4 bg-blue-400 hover:bg-blue-500 text-white px-6 py-2 rounded-lg flex items-center space-x-2 transition-colors">
                                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
