--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -196,15 +196,18 @@
                             <p class="text-lg text-gray-600 mb-8">Helping and empowering customers with Treasure Data Service AI</p>
 
                             <!-- AI Chat Interface -->
-                            <div class="bg-white border border-gray-200 rounded-2xl p-8 shadow-sm max-w-4xl mx-auto">
+                            <div class="max-w-4xl mx-auto">
                                 <div class="relative">
                                     <textarea
                                         id="ai-textarea"
-                                        class="w-full p-6 text-lg border border-gray-200 rounded-xl resize-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+                                        class="w-full p-6 text-lg border-2 border-blue-300 rounded-2xl resize-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400 bg-white shadow-sm"
                                         rows="4"
                                     ></textarea>
                                     <!-- Animated placeholder overlay -->
                                     <div id="animated-placeholder" class="absolute top-6 left-6 text-lg text-gray-400 pointer-events-none">
+                                        <svg class="w-5 h-5 inline-block mr-2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"></path>
+                                        </svg>
                                         Ask Service AI about <span id="rotating-text" class="inline-block">customers</span>
                                     </div>
                                     <button class="absolute bottom-4 right-4 bg-blue-400 hover:bg-blue-500 text-white px-6 py-2 rounded-lg flex items-center space-x-2 transition-colors">
