Replace Start button with voice recognition and enter icon buttons

--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -207,11 +207,18 @@
                                     <div id="animated-placeholder" class="absolute top-6 left-6 text-lg text-gray-400 pointer-events-none">
                                         Ask Service AI about <span id="rotating-text" class="inline-block">customers</span>
                                     </div>
-                                    <button class="absolute bottom-6 right-6 bg-blue-400 hover:bg-blue-500 text-white px-8 py-3 rounded-lg flex items-center space-x-2 transition-colors">
-                                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
+                                    <!-- Voice Recognition Button -->
+                                    <button class="absolute bottom-6 right-20 bg-gray-500 hover:bg-gray-600 text-white p-3 rounded-full transition-colors">
+                                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                                            <path d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3z"/>
+                                            <path d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z"/>
                                         </svg>
-                                        <span>Start</span>
+                                    </button>
+                                    <!-- Enter/Submit Button -->
+                                    <button class="absolute bottom-6 right-6 bg-gray-500 hover:bg-gray-600 text-white p-3 rounded-full transition-colors">
+                                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M7 11l5-5m0 0l5 5m-5-5v12"/>
+                                        </svg>
                                     </button>
                                 </div>
                             </div>
