--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -207,16 +207,19 @@
                                     <div id="animated-placeholder" class="absolute top-6 left-6 text-lg text-gray-400 pointer-events-none">
                                         Ask Service AI about <span id="rotating-text" class="inline-block">customers</span>
                                     </div>
-                                    <!-- Voice Recognition Button -->
-                                    <button class="absolute bottom-6 right-20 bg-gray-500 hover:bg-gray-600 text-white p-3 rounded-full transition-colors">
+                                    <!-- Dictation Button (no background) -->
+                                    <button class="absolute bottom-6 right-20 text-gray-600 hover:text-gray-800 p-3 transition-colors">
                                         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                                            <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/>
+                                            <path d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3z"/>
+                                            <path d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z"/>
                                         </svg>
                                     </button>
-                                    <!-- Enter/Submit Button -->
-                                    <button class="absolute bottom-6 right-6 bg-gray-500 hover:bg-gray-600 text-white p-3 rounded-full transition-colors">
+                                    <!-- Voice Command Button (with light gray background) -->
+                                    <button class="absolute bottom-6 right-6 bg-gray-300 hover:bg-gray-400 text-gray-700 p-3 rounded-full transition-colors">
                                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M7 11l5-5m0 0l5 5m-5-5v12"/>
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 9l3 3l3-3"/>
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M7 7l5 5l5-5"/>
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M5 5l7 7l7-7"/>
                                         </svg>
                                     </button>
                                 </div>
