Use exact sound wave icon and lighter gray background for voice command button

--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -214,12 +214,14 @@
                                             <path d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z"/>
                                         </svg>
                                     </button>
-                                    <!-- Voice Command Button (with light gray background) -->
-                                    <button class="absolute bottom-6 right-6 bg-gray-300 hover:bg-gray-400 text-gray-700 p-3 rounded-full transition-colors">
-                                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 9l3 3l3-3"/>
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M7 7l5 5l5-5"/>
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M5 5l7 7l7-7"/>
+                                    <!-- Voice Command Button (with lighter gray background) -->
+                                    <button class="absolute bottom-6 right-6 bg-gray-200 hover:bg-gray-300 text-gray-700 p-3 rounded-full transition-colors">
+                                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                                            <rect x="11" y="6" width="2" height="12" rx="1"/>
+                                            <rect x="7" y="8" width="2" height="8" rx="1"/>
+                                            <rect x="15" y="8" width="2" height="8" rx="1"/>
+                                            <rect x="3" y="10" width="2" height="4" rx="1"/>
+                                            <rect x="19" y="10" width="2" height="4" rx="1"/>
                                         </svg>
                                     </button>
                                 </div>
