--- a/service-suite-booth-demo.html
+++ b/service-suite-booth-demo.html
@@ -208,29 +208,21 @@
                                         Ask Service AI about <span id="rotating-text" class="inline-block">customers</span>
                                     </div>
                                     <!-- Dictation Button (no background) -->
-                                    <button class="absolute bottom-6 right-20 text-gray-600 hover:text-gray-800 p-3 transition-colors group relative">
+                                    <button class="absolute bottom-6 right-20 text-gray-600 hover:text-gray-800 p-3 transition-colors">
                                         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                                             <path d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3z"/>
                                             <path d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z"/>
                                         </svg>
-                                        <!-- Tooltip -->
-                                        <div class="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2 px-2 py-1 bg-gray-900 text-white text-sm rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">
-                                            dictate
-                                        </div>
                                     </button>
                                     <!-- Voice Command Button (with lighter gray background) -->
-                                    <button class="absolute bottom-6 right-6 bg-gray-200 hover:bg-gray-300 text-gray-700 p-3 rounded-full transition-colors group relative">
-                                        <svg class="w-6 h-6 group-hover:animate-pulse" fill="currentColor" viewBox="0 0 24 24">
-                                            <rect x="11" y="6" width="2" height="12" rx="1" class="group-hover:animate-bounce"/>
-                                            <rect x="7" y="8" width="2" height="8" rx="1" class="group-hover:animate-pulse"/>
-                                            <rect x="15" y="8" width="2" height="8" rx="1" class="group-hover:animate-pulse"/>
-                                            <rect x="3" y="10" width="2" height="4" rx="1" class="group-hover:animate-bounce"/>
-                                            <rect x="19" y="10" width="2" height="4" rx="1" class="group-hover:animate-bounce"/>
+                                    <button class="absolute bottom-6 right-6 bg-gray-200 hover:bg-gray-300 text-gray-700 p-3 rounded-full transition-colors">
+                                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                                            <rect x="11" y="6" width="2" height="12" rx="1"/>
+                                            <rect x="7" y="8" width="2" height="8" rx="1"/>
+                                            <rect x="15" y="8" width="2" height="8" rx="1"/>
+                                            <rect x="3" y="10" width="2" height="4" rx="1"/>
+                                            <rect x="19" y="10" width="2" height="4" rx="1"/>
                                         </svg>
-                                        <!-- Tooltip -->
-                                        <div class="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2 px-2 py-1 bg-gray-900 text-white text-sm rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">
-                                            voice mode
-                                        </div>
                                     </button>
                                 </div>
                             </div>
